# was-supervision

./: .dir-locals.el  .ghci  .gitignore  CHANGELOG.md  README.md  cabal.project  cross-build.nix  default.nix  docker.nix  shell.nix  todo.org  was-supervision.cabal
.github/workflows/: ci.yml
app/: .dir-locals.el  AppEnv.hs  AppError.hs  AppM.hs  CmdLine.hs  Main.hs
app/AppCapability/: CookieJar.hs  ExeWASAdminCommand.hs
app/Capability/: CookieJar.hs  ExeWASAdminCommand.hs
nix/: sources.json
src/: CmdLine.hs  Env.hs  Types.hs  WasSupervision.hs
src/Capability/: CookieJar.hs  ExeWASAdminCommand.hs
src/Core/: AppError.hs  AuthInfo.hs  ConnectionInfo.hs  Error.hs  MyCookieJar.hs  MyError.hs  MyHas.hs  Types.hs  WasSupervision.hs
test/: .dir-locals.el  Spec.hs
