cabal-version:       2.4
name:                was-supervision
version:             0.0.0.0
synopsis:            Take the provision of a WebSphere cell.
description:         Take the provision of a WebSphere cell.
homepage:            https://github.com/hughjfchen/was-supervision
bug-reports:         https://github.com/hughjfchen/was-supervision/issues
license:             MIT
license-file:        LICENSE
author:              Hugh JF Chen
maintainer:          Hugh JF Chen <hugh.jf.chen@gmail.com>
copyright:           2020 Hugh JF Chen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.4

source-repository head
  type:                git
  location:            https://github.com/hughjfchen/was-supervision.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , req ^>= 3.8.0
                     , aeson ^>= 1.5.4.1
                     , html-parse ^>= 0.2.0.2
                     , text ^>= 1.2.4.0

  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     WasSupervision

executable was-supervision
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       was-supervision
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite was-supervision-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       was-supervision
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark was-supervision-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , was-supervision
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
